disunity-derive/tests/16-invalid-enum-attribute.stderr
error: expected `=`
 --> tests/16-invalid-enum-attribute.rs:4:24
  |
4 | #[disunity(discriminant)]
  |                        ^
